# Git-with-Qt-Cpp

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
.github/workflows/: cmake-multi-platform.yml
docs/: architecture.md  usage_guide.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  CommandRouter.cpp  CommandRouter.h
src/commands/: CMakeLists.txt  GitCommand.cpp  GitCommand.h  GitCommandAdd.cpp  GitCommandAdd.h  GitCommandBranch.cpp  GitCommandBranch.h  GitCommandCheckout.cpp  GitCommandCheckout.h  GitCommandCommit.cpp  GitCommandCommit.h  GitCommandDiff.cpp  GitCommandDiff.h  GitCommandInit.cpp  GitCommandInit.h  GitCommandLog.cpp  GitCommandLog.h  GitCommandPull.cpp  GitCommandPull.h  GitCommandPush.cpp  GitCommandPush.h  GitCommandStatus.cpp  GitCommandStatus.h
src/core/: CMakeLists.txt  GitBlob.cpp  GitBlob.h  GitCommit.cpp  GitCommit.h  GitExecutable.cpp  GitExecutable.h  GitIndex.cpp  GitIndex.h  GitObject.cpp  GitObject.h  GitRepository.cpp  GitRepository.h  GitRepositoryInfo.cpp  GitRepositoryInfo.h  GitTag.cpp  GitTag.h  GitTree.cpp  GitTree.h
src/gui/: BranchManagerDialog.cpp  BranchManagerDialog.h  BranchManagerDialog.ui  CMakeLists.txt  CommandConsoleWidget.cpp  CommandConsoleWidget.h  CommandConsoleWidget.ui  CommitDialog.cpp  CommitDialog.h  CommitDialog.ui  DiffViewerWidget.cpp  DiffViewerWidget.h  DiffViewerWidget.ui  InitRepoDialog.cpp  InitRepoDialog.h  InitRepoDialog.ui  LogViewerWidget.cpp  LogViewerWidget.h  LogViewerWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RepoExplorerWidget.cpp  RepoExplorerWidget.h  RepoExplorerWidget.ui  RepoWidget.cpp  RepoWidget.h  StashDialog.cpp  StashDialog.h  StashDialog.ui  StatusWidget.cpp  StatusWidget.h  StatusWidget.ui
src/tests/: CMakeLists.txt  test_git_command_commit.cpp  test_git_commit.cpp  test_git_index.cpp  test_git_object.cpp  test_git_repository.cpp  test_main.cpp
src/utils/: CMakeLists.txt  CompressionUtils.cpp  CompressionUtils.h  FileUtils.cpp  FileUtils.h  HashUtils.cpp  HashUtils.h  Logger.cpp  Logger.h
